fix: conditionally log HTTPS status based on actual connector creation result